objects/TR_Retention__Retention_Activity_Subject__c.object
<CustomObject>
    <description>Store all the retention activity subjects. This will be displayed as a picklist in the Activity template page.</description>
    <fields>
        <fullName>TR_Retention__Activity_Description_Text__c</fullName>
        <label>Activity Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR_Retention__Activity_Description__c</fullName>
        <description>Activity Description</description>
        <inlineHelpText>Activity Description</inlineHelpText>
        <label>Activity Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR_Retention__Activity_SubjectText__c</fullName>
        <description>Activity Subject text</description>
        <inlineHelpText>Activity Subject text</inlineHelpText>
        <label>Activity Subject Text</label>
        <length>250</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TR_Retention__Activity_Subject__c</fullName>
        <description>Activity Subject</description>
        <inlineHelpText>Activity Subject</inlineHelpText>
        <label>Activity Subject</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR_Retention__SUB_BU__c</fullName>
        <description>SUB BU</description>
        <inlineHelpText>SUB BU</inlineHelpText>
        <label>SUB BU</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Retention Subject-Description</label>
    <listViews>
        <fullName>TR_Retention__All</fullName>
        <columns>NAME</columns>
        <columns>TR_Retention__Activity_Subject__c</columns>
        <columns>TR_Retention__SUB_BU__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>TR_Retention__All_Large_Law</fullName>
        <columns>NAME</columns>
        <columns>TR_Retention__Activity_Subject__c</columns>
        <columns>TR_Retention__SUB_BU__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TR_Retention__SUB_BU__c</field>
            <operation>equals</operation>
            <value>Large Law</value>
        </filters>
        <label>All Large Law</label>
    </listViews>
    <listViews>
        <fullName>TR_Retention__All_Small_Law</fullName>
        <columns>NAME</columns>
        <columns>TR_Retention__Activity_Subject__c</columns>
        <columns>TR_Retention__SUB_BU__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TR_Retention__SUB_BU__c</field>
            <operation>equals</operation>
            <value>Small Law</value>
        </filters>
        <label>All Small Law</label>
    </listViews>
    <nameField>
        <displayFormat>Sub-{000}</displayFormat>
        <label>Retention Subject-Description Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retention Subject-Description</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>TR_Retention__Activity_Description_Not_Blank_Or_None</fullName>
        <active>true</active>
        <description>Activity Description is required.</description>
        <errorConditionFormula>If( ISBlank(TR_Retention__Activity_Description_Text__c), true, false)</errorConditionFormula>
        <errorMessage>Please enter &apos;Activity Description&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TR_Retention__SUB_BU_Not_Blank_Or_None</fullName>
        <active>true</active>
        <description>SUB BU is required. Don&apos;t Allow None option from the VFpage Dropdown</description>
        <errorConditionFormula>If( OR(TR_Retention__SUB_BU__c ==&apos;None&apos;, ISBlank(TR_Retention__SUB_BU__c)), true, false)</errorConditionFormula>
        <errorMessage>Please select &apos;SUB BU&apos;.</errorMessage>
    </validationRules>
</CustomObject>